created for loop and tested it w/ console log

--- a/sortDrinks.html
+++ b/sortDrinks.html
@@ -38,7 +38,14 @@
 			var blackDrinks = [];
 			var colorDrinks = [];
 			
-			/*Third, I'm going to create a for loop. It will check each item in the list. 
+			/*Third, I'm going to create a for loop. It will check each drink in the drinkList
+			 * to see if it's black. If it is, it'll put it into blackDrinks. Otherwise, it'll
+			 * put it into colorDrinks.
+			 */
+			for(var i=0;i<4;i++){
+				var currentDrink = drinkList[i];
+				console.log(drinkList[i]);
+			}
 		</script>
 	</body>
 </html>
