console logged in the if statement to make sure the comp knows which drinks are which colors

--- a/sortDrinks.html
+++ b/sortDrinks.html
@@ -44,8 +44,15 @@
 			 */
 			for(var i=0;i<4;i++){
 				var currentDrink = drinkList[i];
-				console.log(drinkList[i]);
-			}
+				console.log("Drink",i+1,drinkList[i]);//listing the drinks
+				
+				if(currentDrink.color == "black"){
+					console.log("This is a BLACK drink!");//testing to see if it knows it's black
+					
+				}else{
+					console.log("This is a COLOR drink!");//testing to see if it knows it's not black
+				}//end if
+			}//end for
 		</script>
 	</body>
 </html>
