made a little CSS and put it in an external CSS file

--- a/sortDrinks.html
+++ b/sortDrinks.html
@@ -5,10 +5,11 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<title>Drink Sorter</title>
 		<script src="drinkScript.js" type="text/javascript"></script>
+		<link rel="stylesheet" type="text/css" href="drinkStyle.css"></link>
 	</head>
 	<body>
 		<h1>Welcome to the Drink Sorter</h1>
-		<div>This javascript project will sort drinks. Rick-click, Inspect element, and Console to check it.</div>
+		<div>This javascript project sorts drinks. Rick-click, Inspect element, and Console to check it.</div>
 	</body>
 </html>
 
